# tokenzip

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
tests/: test_compressors.py
tokenzip/: __init__.py  cli.py  config.py  pipeline.py  stats.py
tokenzip/compressors/: __init__.py  ast_pattern_extractor.py  base.py  comment_stripper.py  deduplicator.py  dictionary_coder.py  rle_compressor.py  whitespace_normalizer.py
tokenzip/mcp/: server.py  session_tracker.py
