[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenzip"
version = "0.2.0"
description = "Text-domain compression for LLM prompts — reduce token usage by 20-30% without losing context"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "tiktoken>=0.5.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tokenzip = "tokenzip.cli:main"
tokenzip-mcp = "tokenzip.mcp.server:main"

[tool.setuptools.packages.find]
include = ["tokenzip*"]
